--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
               <line x1="60" y1="74" x2="60" y2="106" stroke="#ff6b86" stroke-width="2"/>
             </svg>
             <div class="balloon-photo">
-              <img src="ảnh/z7137026031987_4544fcd1d4ac51bf462f9a20d6b00075.jpg" alt="Photo">
+           <img src="uyen.jpg" alt="Bé Uyên">
+
             </div>
             <div class="gift"></div>
           </div>
@@ -438,3 +439,4 @@
   </script>
 </body>
 </html>
+
